--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
             <h3>Get Know About</h3>
             <h2>what customer say</h2>
             <hr>
-            <article>
+            <!-- <article>
 
-            </article>
+            </article> -->
         </div>
 
 
@@ -240,10 +240,10 @@
                         <li>Fast Brandwidth</li>
                         <li>Responsive</li>
                         <li>Customization</li>
-                        <form>
-                            <button class="select_price" formaction="#">sign up</button>
-                        </form>
                     </ul>
+                    <form>
+                        <button class="select_price" formaction="#">sign up</button>
+                    </form>
                 </div>
 
                 <div class="professional section">
@@ -254,10 +254,10 @@
                         <li>Fast Brandwidth</li>
                         <li>Responsive</li>
                         <li>Customization</li>
-                        <form>
-                            <button class="select_price" formaction="#">sign up</button>
-                        </form>
                     </ul>
+                    <form>
+                        <button class="select_price" formaction="#">sign up</button>
+                    </form>
                 </div>
 
                 <div class="unlimited section">
@@ -268,10 +268,10 @@
                         <li>Fast Brandwidth</li>
                         <li>Responsive</li>
                         <li>Customization</li>
-                        <form>
-                            <button class="select_price" formaction="#">sign up</button>
-                        </form>
                     </ul>
+                    <form>
+                        <button class="select_price" formaction="#">sign up</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -284,11 +284,11 @@
             <hr>
 
             <div class="name">
-                <input name="name" type="text" value="" placeholder="Your Name" required />
+                <input name="name" type="text" value="" placeholder="Your Name" required >
             </div>
 
             <div class="email">
-                <input email="email" type="text" value="" placeholder="Example@gmail.com" required />
+                <input type="text" value="" placeholder="Example@gmail.com" required >
             </div>
 
             <form>
@@ -313,8 +313,7 @@
             </div>
 
             <div class="useful links">
-                <ul type="none">useful links
-
+                <ul>
                     <li><a href="#">Resource</a></li>
                     <li><a href="#">Downloads</a></li>
                     <li><a href="#">Graphics</a></li>
@@ -325,7 +324,7 @@
 
 
             <div class="free goods">
-                <ul type="none">
+                <ul>
                     <li><a href="#">Movies</a></li>
                     <li><a href="#">Music</a></li>
                     <li><a href="#">Videos</a></li>
@@ -335,7 +334,7 @@
             </div>
 
             <div class="elements">
-                <ul type="none">
+                <ul>
                     <li><a href="#">UI Elements</a></li>
                     <li><a href="#">Materials</a></li>
                     <li><a href="#">Flat Ui</a></li>
@@ -345,7 +344,7 @@
             </div>
 
             <div class="about us">
-                <ul type="none">
+                <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Layourl</a></li>
