--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet/less" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -18,7 +22,7 @@
     <link rel="stylesheet/less" href="css/form.less">
     <link rel="stylesheet" href="owncarousel/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="owncarousel/assets/owl.carousel.min.css">
-  <link rel="stylesheet" href="owncarousel/assets/animate.css">
+    <link rel="stylesheet" href="owncarousel/assets/animate.css">
     <title>Flaby</title>
 
 </head>
@@ -31,9 +35,9 @@
             <ul>
                 <li><a href="#">home</a></li>
                 <li><a href="#services">services</a></li>
-                <li><a href="#">portfolio</a></li>
-                <li><a href="#">blog</a></li>
-                <li><a href="#">contact us</a></li>
+                <li><a href="#other-services">portfolio</a></li>
+                <li><a href="#slider">blog</a></li>
+                <li><a href="#contact">contact us</a></li>
                 <li><a href="#login">login</a></li>
             </ul>
         </nav>
@@ -115,7 +119,7 @@
         </div>
     </section>
 
-    <section class="other-services">
+    <section id="other-services" class="other-services">
 
         <div>
             <h3>View Our Latest</h3>
@@ -189,7 +193,7 @@
         </div>
     </section>
 
-    <section class="slider">
+    <section id="slider" class="slider">
         <div class="slider wrapper">
             <div class="customn comments">
                 <h3>Get Know About</h3>
@@ -323,7 +327,7 @@
 
     <hr class="last">
 
-    <footer>
+    <footer id="contact">
         <div class="footer-top">
             <div class="logo">
                 <img src="img/logo2.png" alt="">
